# core

./: BUILD_WASM.md  Cargo.toml
.github/workflows/: wasm.yaml
src/: common_ffi.rs  lib.rs
src/dictionary/: ffi.rs
src/namespaces/: namespaces.rs
src/utils/: ffi.rs  mod.rs  path.rs
src/wasm/: mod.rs
