[package]
name = "sanny_builder_core"
version = "0.4.2"
authors = ["Seemann <mail@sannybuilder.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
crate-type = ["rlib", "cdylib"]

[dependencies]
# --- cross-platform / pure-logic (also used by the wasm build) ---
nom = "7.1.3"
nom_locate = "4.1.0"
lazy_static = "1.4.0"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
lexical-core = "0.8.5"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
version-compare = "0.2.0"
const_format = "0.2.32"
anyhow = "1.0.40"
lines_lossy = "0.1.0"

# --- native (desktop/DLL) only: not available/meaningful on wasm32 ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.79"
hotwatch = "0.4.6"
simplelog = "0.11.2"
ureq = { version = "2.5.0", features = ["json"] }
ctor = "0.1.20"
libloading = "0.7.0"
zip = { git = "https://github.com/x87/zip.git", default-features = false, features = ["deflate"] }
cached = "0.50.0"
gta-ide-parser = "0.0.4"

# --- Windows-only: PE file-version reading and Windows message hooks. These
# crates only compile when actually targeting Windows (winapi is a stub on
# other OSes), so this is stricter than just "not wasm32" -- it also
# excludes native Linux/macOS builds (e.g. building on Termux/Linux to
# sanity-check the crate outside of wasm).
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver", "winuser"] }
version_info = "0.0.6"
normpath = "1.2"

# --- wasm target only ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
